[gd_scene load_steps=4 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonToggleStandard/PlayerGUI_ButtonToggleStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/Assets/WhiteLine_11x11.png" type="Texture" id=2]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/SubPanels/TutorialChaptersListPanel.gd" type="Script" id=3]

[node name="TutorialChaptersListPanel" type="MarginContainer"]
margin_right = 150.0
margin_bottom = 102.0
rect_min_size = Vector2( 180, 150 )
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 11.0
margin_bottom = 150.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 169.0
margin_right = 180.0
margin_bottom = 150.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 180.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 139.0
margin_right = 180.0
margin_bottom = 150.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="."]
margin_right = 180.0
margin_bottom = 150.0
mouse_filter = 2
custom_constants/margin_right = 11
custom_constants/margin_top = 11
custom_constants/margin_left = 11
custom_constants/margin_bottom = 11

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer"]
margin_left = 11.0
margin_top = 11.0
margin_right = 169.0
margin_bottom = 139.0
rect_min_size = Vector2( 80, 80 )

[node name="MarginContainer" type="MarginContainer" parent="ContentContainer/ScrollContainer"]
margin_right = 146.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 15
custom_constants/margin_left = 5
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/ScrollContainer/MarginContainer"]
margin_left = 5.0
margin_top = 15.0
margin_right = 141.0
margin_bottom = 225.0
mouse_filter = 2
custom_constants/separation = 15

[node name="Tutorial_Chapter01" parent="ContentContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 43.0
margin_right = 93.0
size_flags_horizontal = 6
text_for_label = "Chapter 1:
Game Basics"

[node name="Tutorial_Chapter01_01" parent="ContentContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 43.0
margin_top = 45.0
margin_right = 93.0
margin_bottom = 75.0
size_flags_horizontal = 6
text_for_label = "Chapter 1.5:
Game Basics Part 2"

[node name="Tutorial_Chapter02" parent="ContentContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 43.0
margin_top = 90.0
margin_right = 93.0
margin_bottom = 120.0
size_flags_horizontal = 6
text_for_label = "Chapter 2:
Tower Tier & Synergies"

[node name="Tutorial_Chapter03" parent="ContentContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 43.0
margin_top = 135.0
margin_right = 93.0
margin_bottom = 165.0
size_flags_horizontal = 6
text_for_label = "Chapter 3:
Ingredient Effects"

[node name="Tutorial_Chapter04" parent="ContentContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 43.0
margin_top = 180.0
margin_right = 93.0
margin_bottom = 210.0
size_flags_horizontal = 6
text_for_label = "Chapter 4:
Combination"
